fix search modal object jumping

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -19,3 +19,17 @@
     transform: translateX(-100%);
   }
 }
+
+@keyframes loader {
+  from {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(0);
+  }
+}
