--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -13,5 +13,13 @@
 }
 
 .animate-show-up {
-  animation: showUp 1s ease-out forwards;
+  animation: 1s ease-out forwards showUp;
+}
+
+.animate-loader-1 {
+  animation: 1.5s ease-in-out infinite both loader;
+}
+
+.animate-loader-2 {
+  animation: 1.5s ease-in-out 0.75s infinite both loader;
 }
